# rust-example

./: .env  Cargo.toml  README.md  config.json  diesel.toml  paymaster.json
migrations/2024-09-16-222940_apikeys/: down.sql  up.sql
migrations/2024-09-17-073550_apikeys/: down.sql  up.sql
src/: apikeys.rs  main.rs  schema.rs
src/controller/: health.rs  mod.rs  paymaster.rs
src/utils/: db.rs
