[package]
name = "arka-in-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
ethers = "2.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
url = "2.5.2"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
postgres = "0.19"
